<resources>
    <string name="app_name">RestaurantApp</string>
    <string name="fsa_logo_image_view_description">FSA Logo</string>
    <string name="search_button_text">Search</string>
    <string name="view_all_button_text">View All Establishments</string>
    <string name="all_establishments_text_view_text">All establishments</string>
    <string name="all_establishments_prev_page_button_text">Prev Page</string>
    <string name="all_establishments_next_page_button_text">Next Page</string>
    <string name="search_field_text_hint">Enter postcode: </string>
    <string name="add_search_filters_button_text">Add filters</string>
    <string name="establishmentsListSearchTitleTextView">Establishments found:</string>
    <string name="refresh_db_data_button">Refresh database</string>
    <string name="search_filter_business_type">Business type:</string>
    <string name="business_type_search_filters">Business type</string>
    <string name="regions_text_view">Region</string>
    <string name="search_filters_title_text_view">Search Filters</string>
    <string name="submit_filters_button_text">Submit</string>
    <string name="clear_filters_button_text">Clear changes</string>
    <string name="authorities_text_view">Authorities</string>
    <string name="search_filters_button_modify_filters">Modify filters</string>
    <string name="filters_selected_text">%d filters selected.</string>
    <string name="max_distance_limit_text_view">Maximum distance</string>
    <string name="sort_by_text_view">Sort by:</string>
    <string name="min_rating_text_view">Minimum hygiene rating</string>
    <string name="establishment_business_name">Business name:</string>
    <string name="rating_date">Date rating:</string>
    <string name="rated_by_authority">Rated by authority: %s</string>
    <string name="business_type">Type of business: </string>
    <string name="establishment_address_line">Address:</string>
    <string name="rating_date_title">Rating Date</string>
    <string name="rating_authority_title">Rating authority</string>
    <string name="business_type_title">Business Type</string>
    <string name="establishment_address_title">Address</string>
    <string name="add_to_favourites_button">Add to favourites</string>
    <string name="back_to_results_button">Back to results</string>
    <string name="dismiss_changes_button">Dismiss changes</string>
    <string name="remove_favourite_establishment">Remove from favourites</string>
    <string name="delete_favourites">Delete Favourites</string>
    <string name="view_favourites_text">View favourites</string>
    <string name="search_results_establishments_title">Search results</string>
    <string name="view_favourites_title">Favourite establishments</string>
    <string name="favourite_flag">Favourite</string>
    <string name="get_location">Get Location</string>
    <string name="exempt_establishment_text">Exempt</string>
    <string name="old_password_text">Old password</string>
    <string name="new_password_text">New password</string>
    <string name="update_password_button_text">Update password</string>
    <string name="set_password_button_text">Set password</string>
    <string name="enter_password_text">Enter password</string>
    <string name="password_login_button_text">Login</string>
    <string name="remove_password_text">Remove password</string>

    <string name="title_activity_fullscreen">FullscreenActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="manage_proper_note_text">Manage note</string>
    <string name="manage_note_text">Manage note</string>
    <string name="type_note_here_text">Type note here</string>
    <string name="remove_note_text">Remove note</string>
    <string name="save_note_text">Save note</string>
    <string name="need_to_set_password">You need to set password to use this functionality</string>
    <string name="manage_password_text">Manage password</string>
    <string name="show_legend">Show legend</string>
</resources>
