<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.ManageNoteActivity">

    <TextView
        android:id="@+id/noteTitleTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:textSize="30sp"
        android:background="@color/pinkFavourite"
        android:text="@string/manage_note_text"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/noteContentsEditText"
        android:hint="@string/type_note_here_text"
        android:layout_marginTop="8dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintTop_toBottomOf="@id/noteTitleTextView"
        app:layout_constraintBottom_toTopOf="@id/noteOptionsLinearLayout"
        android:inputType="text"
        android:autofillHints="@null" />

    <LinearLayout
        android:id="@+id/noteOptionsLinearLayout"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintBottom_toBottomOf="parent">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/removeNoteButton"
            android:text="@string/remove_note_text"
            android:layout_width="match_parent"
            android:onClick="removeNote"
            android:layout_height="wrap_content" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/saveNoteButton"
            android:text="@string/save_note_text"
            android:layout_width="match_parent"
            android:onClick="saveNote"
            android:layout_height="wrap_content" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>