<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.ManagePasswordActivity">

    <TextView
        android:id="@+id/managePasswordTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:textSize="30sp"
        android:background="@color/colorAccent"
        android:text="@string/manage_password_text"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/passwordFieldsLinearLayout"
        android:orientation="vertical"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/oldPasswordTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone"
            android:text="@string/old_password_text"/>
        <EditText
            android:id="@+id/oldPasswordEditText"
            android:visibility="gone"
            android:inputType="textPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/new_password_text"/>
        <EditText
            android:id="@+id/newPasswordEditText"
            android:layout_width="match_parent"
            android:inputType="textPassword"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/submitPasswordMaterialButton"
        app:layout_constraintBottom_toTopOf="@id/removePasswordMaterialButton"
        android:layout_marginBottom="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_width="match_parent"
        android:onClick="setPassword"
        android:layout_height="wrap_content" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/removePasswordMaterialButton"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_width="match_parent"
        android:onClick="removePassword"
        android:text="@string/remove_password_text"
        android:layout_height="wrap_content" />
</androidx.constraintlayout.widget.ConstraintLayout>