<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.LoginScreenActivity">

    <ImageView
        android:id="@+id/FsaLogoImageView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/holo_green_light"
        android:contentDescription="@string/fsa_logo_image_view_description"
        android:src="@drawable/logo"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/passwordLinearLayout"
        android:orientation="vertical"
        app:layout_constraintTop_toTopOf="@id/FsaLogoImageView"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/enter_password_text"/>
        <EditText
            android:id="@+id/passwordEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </LinearLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/submitPasswordMaterialButton"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:text="@string/password_login_button_text"
        android:layout_width="match_parent"
        android:onClick="submitPassword"
        android:layout_height="wrap_content" />

</androidx.constraintlayout.widget.ConstraintLayout>