<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SearchScreenActivity">

    <ImageView
        android:id="@+id/FsaLogoImageView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/holo_green_light"
        android:contentDescription="@string/fsa_logo_image_view_description"
        android:src="@drawable/logo"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/searchFieldEditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:importantForAutofill="no"
        android:inputType="text"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/FsaLogoImageView" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/searchEstablishmentsButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@android:color/holo_red_light"
        android:onClick="sendEstablishmentSearchEnquiry"
        android:text="@string/search_button_text"
        app:layout_constraintTop_toBottomOf="@id/searchFieldEditText" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/viewAllEstablishmentsButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="20dp"
        android:backgroundTint="@android:color/holo_blue_bright"
        android:onClick="viewAllEstablishmentsEnquiry"
        android:text="@string/view_all_button_text"
        app:layout_constraintTop_toBottomOf="@id/searchEstablishmentsButton" />
</androidx.constraintlayout.widget.ConstraintLayout>