<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.SearchFiltersActivity">

    <TextView
        android:id="@+id/searchFiltersTitleTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/holo_green_light"
        android:text="@string/search_filters_title_text_view"
        android:textAlignment="center"
        android:textSize="30sp"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/businessTypeLinearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@id/searchFiltersTitleTextView">

        <TextView
            android:id="@+id/businessTypesTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/business_type_search_filters" />

        <Spinner
            android:id="@+id/businessTypesSpinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/regionLinearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@id/businessTypeLinearLayout">

        <TextView
            android:id="@+id/regionsTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/regions_text_view" />

        <Spinner
            android:id="@+id/regionsSpinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/authoritiesLinearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@id/regionLinearLayout">

        <TextView
            android:id="@+id/authoritiesTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/authorities_text_view" />

        <Spinner
            android:id="@+id/authoritiesSpinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </LinearLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/maxDistanceLimitConstraintLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:layout_marginStart="8dp"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@id/authoritiesLinearLayout">

        <TextView
            android:id="@+id/maxDistanceLimitTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/max_distance_limit_text_view"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

        <TextView
            android:id="@+id/maxDistanceLimitProgressTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:layout_marginEnd="24dp"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <SeekBar
            android:id="@+id/maxDistanceLimitSeekBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintLeft_toLeftOf="parent"
            android:max="200"
            android:progress="30"
            app:layout_constraintTop_toBottomOf="@id/maxDistanceLimitTextView"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/minRatingConstraintLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:layout_marginStart="8dp"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@id/maxDistanceLimitConstraintLayout">

        <TextView
            android:id="@+id/minRatingTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/min_rating_text_view"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

        <TextView
            android:id="@+id/minRatingProgressTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:layout_marginEnd="24dp"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <SeekBar
            android:id="@+id/minRatingSeekBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintLeft_toLeftOf="parent"
            android:max="5"
            android:progress="3"
            app:layout_constraintTop_toBottomOf="@id/minRatingTextView"/>
    </androidx.constraintlayout.widget.ConstraintLayout>


    <LinearLayout
        android:id="@+id/searchFiltersLinearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/clearFiltersMaterialButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="clearFilterChanges"
            android:text="@string/clear_filters_button_text"
            app:backgroundTint="@color/design_default_color_primary" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/submitFiltersMaterialButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@android:color/holo_red_light"
            android:onClick="submitFilters"
            android:text="@string/submit_filters_button_text" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>