<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.EstablishmentViewActivity">

    <TextView
        android:id="@+id/establishmentTitleTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:textSize="30sp"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/establishmentRatingConstraintLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintTop_toBottomOf="@id/establishmentTitleTextView">

        <RatingBar
            android:id="@+id/establishmentRatingRatingBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <LinearLayout
            android:id="@+id/ratingDateLinearLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/establishmentRatingRatingBar">

            <TextView
                android:id="@+id/establishmentRatingDateTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/rating_date_title"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/establishmentRatingDateTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/ratingAuthorityLinearLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/establishmentRatingRatingBar">

            <TextView
                android:id="@+id/establishmentAuthorityTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/rating_authority_title"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/establishmentAuthorityTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/establishmentDetailsConstraintLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@id/establishmentRatingConstraintLayout">


        <LinearLayout
            android:id="@+id/establishmentBusinessTypeLinearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/establishmentBusinessTypeTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/business_type_title"
                android:textSize="24sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/establishmentBusinessTypeTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/establishmentAddressLinearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:orientation="vertical"
            app:layout_constraintTop_toBottomOf="@id/establishmentBusinessTypeLinearLayout">

            <TextView
                android:id="@+id/establishmentAddressTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/establishment_address_title"
                android:textSize="24sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/establishmentAddressTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/addToFavouritesButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:text="@string/add_to_favourites_button"
        app:layout_constraintTop_toBottomOf="@id/establishmentDetailsConstraintLayout"
        android:backgroundTint="@color/pinkFavourite"/>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/goBackButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/back_to_results_button"
            android:onClick="goBack"
            android:backgroundTint="@color/colorPrimary"/>


    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>