<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.ViewAllEstablishmentsActivity">

    <TextView
        android:id="@+id/allEstablishmentsTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/all_establishments_text_view_text"
        android:textAlignment="center"
        android:textSize="30sp"
        android:background="@android:color/holo_blue_bright"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/testRecyclerView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:clickable="true"
        android:focusable="true"
        android:foreground="?android:attr/selectableItemBackground"
        app:layout_constraintTop_toBottomOf="@id/allEstablishmentsTextView"
        app:layout_constraintBottom_toTopOf="@id/allEstablishmentsButtonsConstraintLayout"
        />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/allEstablishmentsButtonsConstraintLayout"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/allEstablishmentsPrevPageButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/all_establishments_prev_page_button_text"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:onClick="onGoToPreviousPage"/>

        <TextView
            android:id="@+id/pageNumberTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            app:layout_constraintLeft_toRightOf="@id/allEstablishmentsPrevPageButton"
            app:layout_constraintRight_toLeftOf="@id/allEstablishmentsNextPageButton"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/allEstablishmentsNextPageButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/all_establishments_next_page_button_text"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:onClick="onGoToNextPage"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>